--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,11 @@ body {
 
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 /*  ===============
         Header
     =============== */
@@ -66,18 +71,26 @@ nav ul li {
 
 main {
     grid-area: main;
+    padding: 1.25em;
+}
+
+.homepage-main {
+    color: white;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
     background: black url('../images/article-image-hero.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
     
-    color: white;
-    height: 350px;
+}
+
+.blog-post-main {
     display: flex;
     flex-direction: column;
-    justify-content: end;
-    padding: 1.25em;
 }
 
 h2 {
@@ -104,12 +117,12 @@ h3 {
     display: grid;
     grid-template-columns: 1fr;
     margin: 20px;
+    gap: 1em;
 }
 
 .blog-post {
     display: flex;
     flex-direction: column;
-    margin-top: 1.5rem;
 }
 
 .blog-heading {
@@ -117,8 +130,29 @@ h3 {
     line-height: 1;
 }
 
+.blog-post-link {
+    color: inherit;
+    text-decoration: none;
+    
+}
+
+.blog-post-main {
+    max-width: 750px;
+    margin: 0 auto;
+}
+
+.blog-post-main h2, .blog-post-main h4 {
+    margin: 1em 0 0.3em 0;
+}
+
+.heading-recent-posts {
+    text-align: center;
+    text-decoration: underline;
+}
+
 .view-more {
     text-align: center;
+    grid-column: 1 / -1;
     
 }
 
@@ -155,6 +189,10 @@ footer p:last-child {
     #articles {
         display: grid;
         justify-content: center;
-        grid-template-columns: repeat(auto-fit, 350px);
+        grid-template-columns: repeat(auto-fit, 300px);
+    }
+
+    .homepage-main {
+        height: 500px;
     }
 }
